[tool.poetry]
name = "jetblack-tweeter"
version = "0.1.0"
description = "An asyncio twitter client"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "jetblack_tweeter" }
]
repository = "https://github.com/rob-blackbourn/jetblack-tweeter"

[tool.poetry.dependencies]
python = "^3.8"
oauthlib = "^3.1.0"
bareClient = "^4.2"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
pylint = "^2.6.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
