[tool.poetry]
name = "jetblack-tweeter"
version = "0.6.0"
description = "An asyncio twitter client"
authors = ["Rob Blackbourn <rob.blackbourn@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "jetblack_tweeter" }
]
repository = "https://github.com/rob-blackbourn/jetblack-tweeter"

[tool.poetry.dependencies]
python = "^3.8"
oauthlib = "^3.1"
bareclient = { version = "^4.6", optional = true }
aiohttp = { version = "^3.7", optional = true }

[tool.poetry.dev-dependencies]
mypy = "^0.910"
pylint = "^2.7"
autopep8 = "^1.5.4"
pytest = "^6.1.1"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
jetblack-markdown = "^0.6"
types-oauthlib = "^3.1"


[tool.poetry.extras]
bareclient = [ "bareclient" ]
aiohttp = [ "aiohttp" ]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
